feat: enhance settings validation, async email service, and hybrid STT architecture
- Add comprehensive Pydantic validation to Settings with SecretStr for sensitive fields
- Add field validators for phone numbers, email, app_env, log_level
- Add helper methods for accessing secret values (get_twilio_auth_token, etc.)
- Add is_production and is_testing properties for environment checks

- Refactor EmailService to use aiosmtplib for async non-blocking email sending
- Add retry logic with exponential backoff for email failures
- Send staff notifications concurrently using asyncio.gather
- Improve error handling and logging

- Add hybrid STT architecture tracking in voice_handler
- Track transcription source (direct vs pipecat) for observability
- Improve error handling for pipeline cancellation

- Add circuit breaker and HTTP client utilities
- Update health checks, webhooks, and websocket handlers
- Remove deprecated appointment_scheduling_agent.py
- Update tests and configuration

--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,12 @@ hiredis>=2.2.0  # Faster Redis protocol parser
 
 # Monitoring & Observability
 prometheus-client>=0.19.0  # Prometheus metrics
+
+# Async Email
+aiosmtplib>=3.0.0  # Non-blocking SMTP
+
+# Rate Limiting
+slowapi>=0.1.9  # API rate limiting
+
+# Resilience
+pybreaker>=1.0.0  # Circuit breaker pattern
